# computational_geometry

./: README.md
materials/convex_hulls/: Aleksandrova_CG_CW02.rnote  HW_ConvexHulls.rnote  HW_ConvexHullsStatic.rnote
materials/geometric_search/: ChainMethod.rnote  TriangulationRefinement.rnote
materials/geometric_search/cw1/: CG_CW1.rnote
materials/proximity/: Aleksandrova_CG_CW03.rnote  Aleksandrova_CG_Proximity.rnote
project/: CMakeLists.txt  gen_dodeca.cpp  main.cpp
